# bengaluru-flowering-trees

./: README.md  index.html  package-lock.json  package.json  tree_species.parquet  tsconfig.json  vite.config.js
.github/workflows/: deploy.yml
assets/: index-C0VhMCwD.css  index-lSEA8e2J.js
public/: tree_species.csv  tree_species.parquet  tree_species_colors.json
public/geojson/: README.md  h3_tree_distribution_Jan_resolution_10.geojson
scripts/: pyproject.toml  tree_census_h3_generator.py
src/: App.svelte  app.css  main.ts
src/lib/components/: MapView.svelte  Sidebar.svelte
